# serializer version: 1
# name: TestCustomerStripeBuilder.test_build_customer_query_with_customer_and_invoice_schemas
  '''
  SELECT outer.id AS id,
         'stripe.stripe_test' AS source_label,
         created_at AS timestamp,
         name AS name,
         email AS email,
         phone AS phone,
         address AS address,
         metadata AS metadata,
         JSONExtractString(address, 'country') AS country,
         cohort AS cohort,
         initial_coupon AS initial_coupon,
         initial_coupon_id AS initial_coupon_id
  FROM stripe_test_customer AS outer
  LEFT JOIN
    (SELECT customer_id,
            formatDateTime(toStartOfMonth(min(created_at)), '%Y-%m') AS cohort,
            argMin(JSONExtractString(discount, 'coupon', 'name'), created_at) AS initial_coupon,
            argMin(JSONExtractString(discount, 'coupon', 'id'), created_at) AS initial_coupon_id
     FROM stripe_test_invoice AS invoice
     GROUP BY customer_id) AS cohort_inner ON equals(cohort_inner.customer_id, outer.id)
  '''
# ---
# name: TestCustomerStripeBuilder.test_build_customer_query_with_customer_schema
  '''
  SELECT outer.id AS id,
         'stripe.stripe_test' AS source_label,
         created_at AS timestamp,
         name AS name,
         email AS email,
         phone AS phone,
         address AS address,
         metadata AS metadata,
         JSONExtractString(address, 'country') AS country,
         NULL AS cohort,
         NULL AS initial_coupon,
         NULL AS initial_coupon_id
  FROM stripe_test_customer AS outer
  '''
# ---
